hard-gists/5722085/run.log
=== Docker Run Log for 5722085 ===
Started at: Mi 29. Okt 15:56:07 CET 2025

[2025-10-29 15:56:08] START: Running container for 5722085
[2025-10-29 15:56:08] SUCCESS: Container 6401c1a73515e738c41e2a60936923b207e39ad27e44794905efa542c205109a started for 5722085
=== Container logs for 5722085 ===
  File "/snippet.py", line 76
    print "Usage: twistd -ny %s" % sys.argv[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5722085 ===
[2025-10-29 15:56:10] INFO: Container 6401c1a73515e738c41e2a60936923b207e39ad27e44794905efa542c205109a has stopped
